<?xml version="1.0"?>
<package format="2">
  <name>tractor_description</name>
  <version>0.0.0</version>
  <description>The tractor_description package</description>

  <maintainer email="hello@farmily.ai">rdv</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
